package pt.ipp.isep.dei.esoft.project.application.session;

/**
 * The type User session.
 */
public class UserSession {
}
